# GameCPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
includes/: Core.hpp  Game.hpp  GameModel.hpp  GameObject.hpp  Player.hpp
multiplayer/: mainM.cc
src/: Body.cc  Body.hh  Client.cc  Client.hh  Coordinates.hh  Core.cc  Core.cpp  Core.hh  Data_body.hh  Game.cc  Game.cpp  Game.hh  GameModel.cpp  GameS.cc  GameS.hh  Menu.cc  Menu.hh  Player.cc  Player.cpp  Player.hh  PlayerClient.hh  Players.hh  Server.cc  Server.hh  Size.hh  main.cc  main.cpp  main.hh  network.proto  test_body.cc  test_body.hh
src/network/: network.pb.cc  network.pb.h
